[gd_scene load_steps=18 format=3 uid="uid://d1x8vh7wd13f"]

[ext_resource type="Script" path="res://scenes/title_button.gd" id="1_rfo5w"]
[ext_resource type="Shader" uid="uid://cxw3ds15g6yf" path="res://scenes/playground.tres" id="2_j7x63"]
[ext_resource type="Theme" uid="uid://ddpx351m2ye8v" path="res://themes/fe_font.tres" id="3_vvg4o"]
[ext_resource type="Texture2D" uid="uid://c1ehgrphs12uk" path="res://graphics/pictures/story_mode.jpg" id="4_6ubjf"]
[ext_resource type="Texture2D" uid="uid://ix7nu7ud6nks" path="res://graphics/icons/book.svg" id="5_bhw7d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g1wbj"]
shader = ExtResource("2_j7x63")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmlaf"]
bg_color = Color(0, 0.490196, 1, 1)
skew = Vector2(0.865, 0)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_op7n1"]
bg_color = Color(1, 1, 1, 1)
skew = Vector2(0.865, 0)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7sef"]
bg_color = Color(1, 1, 1, 1)
skew = Vector2(0.865, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.490196, 1, 1)
corner_detail = 1
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6li7w"]
bg_color = Color(1, 1, 1, 1)
skew = Vector2(0.865, 0)
border_color = Color(0, 0.8, 0.8, 1)
corner_detail = 1

[sub_resource type="Animation" id="Animation_6rh0m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(224, 123)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../ExtrasPivot/ButtonTitle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shade:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0.113725, 0.533333)]
}

[sub_resource type="Animation" id="Animation_08tf2"]
resource_name = "expand"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(224, 123), Vector2(300, 123)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../ExtrasPivot/ButtonTitle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shade:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0.113725, 0.533333), Color(0, 0, 0.337255, 0.137255)]
}

[sub_resource type="Animation" id="Animation_qalux"]
resource_name = "shrink"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(300, 123), Vector2(224, 123)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../ExtrasPivot/ButtonTitle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shade:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0.337255, 0.137255), Color(0, 0, 0.113725, 0.533333)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xe6fm"]
_data = {
"RESET": SubResource("Animation_6rh0m"),
"expand": SubResource("Animation_08tf2"),
"shrink": SubResource("Animation_qalux")
}

[sub_resource type="Animation" id="Animation_ev7rq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iyad4"]
resource_name = "glow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6ul0"]
_data = {
"RESET": SubResource("Animation_ev7rq"),
"glow": SubResource("Animation_iyad4")
}

[node name="StoryGroup" type="MarginContainer"]
custom_minimum_size = Vector2(224, 123)
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
script = ExtResource("1_rfo5w")

[node name="ExtrasPivot" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="ButtonTitle" type="Panel" parent="ExtrasPivot"]
visible = false
material = SubResource("ShaderMaterial_g1wbj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = -45.0
offset_right = 75.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rmlaf")

[node name="Label" type="Label" parent="ExtrasPivot/ButtonTitle"]
layout_mode = 1
offset_left = 19.0
offset_right = 300.0
offset_bottom = 39.0
theme = ExtResource("3_vvg4o")
theme_override_font_sizes/font_size = 21
text = "	Story Mode"
vertical_alignment = 1

[node name="ButtonShadow" type="Panel" parent="ExtrasPivot"]
modulate = Color(0, 0, 0, 0.443137)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 5.0
offset_right = 7.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_op7n1")

[node name="Glow" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k7sef")

[node name="ButtonMask" type="Button" parent="."]
clip_children = 1
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/disabled = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/hover = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_6li7w")
theme_override_styles/normal = SubResource("StyleBoxFlat_6li7w")

[node name="Texture" type="TextureRect" parent="ButtonMask"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -115.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_6ubjf")
stretch_mode = 2

[node name="Shade" type="ColorRect" parent="ButtonMask/Texture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0.113725, 0.533333)

[node name="Icon" type="TextureRect" parent="ButtonMask"]
layout_mode = 1
offset_left = 41.0
offset_top = 11.0
offset_right = 127.0
offset_bottom = 109.0
mouse_filter = 2
texture = ExtResource("5_bhw7d")
expand_mode = 3

[node name="IconShadow" type="TextureRect" parent="ButtonMask/Icon"]
modulate = Color(0, 0, 0, 0.443137)
show_behind_parent = true
layout_mode = 1
offset_left = 6.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 106.0
mouse_filter = 2
texture = ExtResource("5_bhw7d")
expand_mode = 3

[node name="Focus" type="AnimationPlayer" parent="."]
root_node = NodePath("../ButtonMask/Texture")
libraries = {
"": SubResource("AnimationLibrary_xe6fm")
}

[node name="Glowing" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q6ul0")
}

[connection signal="focus_entered" from="ButtonMask" to="." method="_on_story_button_mask_focus_entered"]
[connection signal="focus_exited" from="ButtonMask" to="." method="_on_story_button_mask_focus_exited"]
[connection signal="pressed" from="ButtonMask" to="." method="_on_button_mask_pressed"]
[connection signal="animation_finished" from="Glowing" to="." method="_on_glowing_animation_finished"]
